add licence + url

--- a/pom.xml
+++ b/pom.xml
@@ -76,4 +76,17 @@
             </plugin>
         </plugins>
     </build>
+
+    <url>https://github.com/aaitmouloud/springfox-collection-example-plugin</url>
+    <description>Collection Example plugin for Springfox.</description>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+
 </project>
