--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.aaitmouloud</groupId>
     <artifactId>springfox-collection-example-plugin</artifactId>
-    <version>3.0.0</version>
+    <version>3.0.0-SNAPSHOT</version>
     <name>Collection Example plugin for Springfox</name>
 
     <properties>
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.9.9.2</version>
+            <version>2.10.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
